# milionaire-game

./: README.md  backend.dockerfile  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  mypy.ini  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 3c784ffbc244_creating_milionaire_game_model.py  f0819165dbd7_modifying_question_model.py
app/: initial_data.py  main.py  tests_pre_start.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: answer.py  game.py  login.py  question.py  users.py  utils.py
app/constants/: enums.py  role.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_answer.py  crud_game.py  crud_question.py  crud_role.py  crud_user.py  crud_user_role.py  querybuilder.py
app/db/: base.py  base_class.py  init_db.py
app/db/seeder/: __init__.py  base.py  user.py
app/models/: answer.py  game.py  question.py  role.py  user.py  user_role.py
app/schemas/: BaseSchemaModel.py  __init__.py  answer.py  game.py  question.py  search.py  user.py  user_role.py
app/tests/: conftest.py
scripts/: start_development.sh
